feat: Add count to product
