# internal/services/product_service/docs/swagger.json
@@ -251,6 +251,9 @@
         "dtos.CreateProductRequestDto": {
             "type": "object",
             "properties": {
+                "count": {
+                    "type": "integer"
+                },
                 "description": {
                     "type": "string"
                 },
@@ -292,11 +295,17 @@
         "dtos.ProductDto": {
             "type": "object",
             "properties": {
+                "count": {
+                    "type": "integer"
+                },
                 "createdAt": {
                     "type": "string"
                 },
                 "description": {
                     "type": "string"
+                },
+                "inventoryId": {
+                    "type": "integer"
                 },
                 "name": {
                     "type": "string"
@@ -323,12 +332,20 @@
         "dtos.UpdateProductRequestDto": {
             "type": "object",
             "required": [
+                "count",
+                "inventoryId",
                 "name",
                 "price"
             ],
             "properties": {
+                "count": {
+                    "type": "integer"
+                },
                 "description": {
                     "type": "string"
+                },
+                "inventoryId": {
+                    "type": "integer"
                 },
                 "name": {
                     "type": "string"
