# internal/services/product_service/product/features/updating_product/v1/dtos/update_product_request_dto.go
@@ -9,4 +9,6 @@ type UpdateProductRequestDto struct {
 	Name        string    `json:"name" validate:"required"`
 	Description string    `json:"description"`
 	Price       float64   `json:"price" validate:"required"`
+	Count       int32     `json:"count" validate:"required"`
+	InventoryId int64     `json:"inventoryId" validate:"required"`
 }
